--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
 </head>
 <body>
-    <p>Это моя первая страница</p>
+    <p style="color:red";> Это моя первая страница</p> 
 </body>
 </html>
