--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <p style="color:red";> Это моя первая страница</p> 
-    <input type="button" value="жми меня" onclick="mult()">
+    <input type="button" value="жми меня" onclick="mult()" style="color:blueviolet; font-size: medium   ;">
 
 </body>
 </html>
